# qtdemo_conti

./: CMakeLists.txt  Pg01_GaugeDashboard.qml  Pg02_Chart.qml  README.md  iGRPCClient.h  main.cpp  main.qml  qml.qrc  rcu-service.proto  tAteCoreCntApiClientImpl.cpp  tAteCoreCntApiClientImpl.h  tGRPCPull.h  tGRPCPush.h  tMockClient.h
GUI/: DashboardGaugeStyle.qml
server_Impl/: CMakeLists.txt  README.md  client.cpp  iGRPCClient.h  server.cpp  tAteCoreCntApiClientImpl.h  tMockClient.h
